exercises/k8s/greeter-virtualservice-v2-firefox.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
    name: greeter-service
spec:
    hosts:
        - greeter-service
    http:
        - match:
              - headers:
                    x-user:
                        regex: '.*alpha.*'
          route:
              - destination:
                    host: greeter-service
                    port:
                        number: 3000
                    subset: v3
        - match:
              - headers:
                    x-user:
                        regex: '.*beta.*'
          route:
              - destination:
                    host: greeter-service
                    port:
                        number: 3000
                    subset: v
        - route:
              - destination:
                    host: greeter-service
                    port:
                        number: 3000
                    subset: v1
